--- a/2-CSS/18GridAndFlexProject3.css
+++ b/2-CSS/18GridAndFlexProject3.css
@@ -1,5 +1,5 @@
 .main-nav {
-    background-color: #e600e6;
+    background-color: #bb00c2;
     box-shadow: rgba(0, 0, 0, 5) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
     font-size: 2em;
 }
@@ -19,11 +19,11 @@ a {
 
 .flexContainer {
     background-color: #8c1aff;
-    box-shadow: rgba(0, 0, 0, 5) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
     display: flex;
 }
 
-.top-Container {
+.top-container {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: repeat(auto-fit minmax(200px, 1fr));
@@ -32,4 +32,29 @@ a {
 p {
     font-family: Arial;
     font-size: 1.2em;
+    padding: 20px;
+}
+
+body {
+    margin: auto 0;
+}
+
+.container {
+    background-color: #34002e;
+    box-shadow: rgba(0, 0, 0, 5) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    display: grid;
+    grid-template: 1fr / repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
+    padding: 20px;
+}
+
+.box {
+    margin: 20px;
+    padding: 15px;
+    background-color: #954f96;
+
+}
+
+.box>img {
+    width: 100%;
 }
