Finished Font Awesome

--- a/3-Bootstrap/WebDevelopmentProject/5OurCss2/css/style.css
+++ b/3-Bootstrap/WebDevelopmentProject/5OurCss2/css/style.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 #header .overlay {
-    background-color: rgba(26, 0, 26, .5);
+    background-color: rgba(121, 128, 250, 0.5);
     height: 100vh;
 }
 
