--- a/3-Bootstrap/WebDevelopmentProject/FontAwesome/css/style.css
+++ b/3-Bootstrap/WebDevelopmentProject/FontAwesome/css/style.css
@@ -1,3 +1,9 @@
+/* General Changes */
+/* h3 {
+    font-size: 30px;
+    font-weight: bold;
+} */
+
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -35,7 +41,7 @@ h1 {
 }
 
 #header .overlay {
-    background-color: rgba(26, 0, 26, .5);
+    background-color: rgba(0, 4, 255, 0.06);
     height: 100vh;
 }
 
@@ -45,4 +51,19 @@ h1 {
 
 .btn-outline-secondary:hover {
     background-color: #00b3ce;
+}
+
+/* #features .fa {
+    font-size: 80px;
+} */
+
+/* Features Section */
+
+#features i {
+    color: #00fdf0ce;
+    cursor: pointer;
+}
+
+#features h3:hover {
+    color: #00fdf0ce;
 }
