--- a/4-IntermediateBootstrap/WebDevelopmentProject/11Forms/css/style.css
+++ b/4-IntermediateBootstrap/WebDevelopmentProject/11Forms/css/style.css
@@ -153,3 +153,51 @@ i {
 }
 
 /* Gallery Section */
+
+/* Footer Section */
+#footer {
+    background: rgba(17, 17, 17, 0.885);
+    width: 100%;
+
+}
+
+
+#footer .container {
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social {
+    margin: 20px 0;
+
+}
+
+.social a {
+    color: white;
+    margin-right: 25px;
+    font-size: 22px;
+    text-decoration: none;
+
+}
+
+.content h2 {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+
+}
+
+#footer .container .content {
+    padding: 10px 20px;
+    color: white;
+
+}
+
+.second {
+    margin-left: -20px;
+}
+
+
+/* Footer Section */
